# siege-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  recipe.json
.github/: codecov.yml
.github/workflows/: changelog.yml  check.yml  publish_image.yml  test.yml
samples/: full_profile.json  game-status-with-error.json  game-status.json  maps.json  operator_list.json  operators.json  playtime.json  search_player.json  seasonal.json
scripts/: clean-coverage.sh  coverage.sh  open-coverage.sh
siege-api/: Cargo.toml  README.md
siege-api/src/: auth.rs  client.rs  constants.rs  game_models.rs  lib.rs  maps.rs  models.rs  operator.rs
siege-api/src/data/: mod.rs  operator.rs  rank.rs
siege-api/src/models/: meta.rs  playerstats.rs
siege-api/src/operator/: data.rs
siege-bot/: Cargo.toml
siege-bot/src/: commands.rs  constants.rs  formatting.rs  handler.rs  main.rs  siege_player_lookup.rs
siege-bot/src/commands/: add_player.rs  all_maps.rs  all_operators.rs  command.rs  context.rs  discord_app_command.rs  game_status.rs  id.rs  map.rs  operator.rs  ping.rs  statistics.rs
siege-bot/src/formatting/: all_maps_format.rs  all_operators_format.rs  statistics_format.rs
src/: auth.rs  client.rs  constants.rs  lib.rs  models.rs
