[package]
name = "siege-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
derive-getters = "0.2.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.158", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.95"
