[package]
name = "siege-bot"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]
publish = false

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
