[package]
name = "siege-bot"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]
publish = false

[dependencies]
siege-api = { path = "../siege-api" }
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "utils",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = "1.3.0"
thiserror = "1.0.40"
async-trait = "0.1.68"
