[package]
name = "siege-bot"
version = "0.8.0"
edition = "2021"
rust-version = "1.69"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]
publish = false

[dependencies]
siege-api = { path = "../siege-api" }
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "utils",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
uuid = { version = "1.3.0", features = ["v4"] }
thiserror = "1.0.40"
async-trait = "0.1.68"
duplicate = "1.0.0"
strum = "0.24.1"
serde_json = "1.0.95"

[dev-dependencies]
chrono = "0.4.24"
mockall = "0.11.4"
tempfile = "3.5.0"
